feat: add consumable edition
